--- a/About_Me.html
+++ b/About_Me.html
@@ -4,24 +4,23 @@
 <!--
 Title: IS_LT 4355
 Use: ???
-Author: Madison Tinsley
+Author: Madison A Tinsley
 School/Term: University of Missouri Spring 2023
 Developed: Feb 5 2023
-Tested: Feb 5 2023
-
-Adjust your headings (except for Heading 1)
-Include your "about you" Paragraph
-Include your Education overview as a Paragraph for now (we will change this in the upcoming weeks to include a list)
-Add your quote using the Blockquote element.
+Tested: Feb 24 2023
 -->
-
+<div>
+            <link rel="stylesheet" href="aboutme.css"></link>
            	<meta charset="utf-8">
            	<title>Template</title>
 </head>
 <body>
     <header><h1>About Me</h1></header>
     <main>
-        <p>My name is Madison Tinsley, and I am 21 years old. I grew up in Lee’s Summit,
+        <a href="file:///C:/Users/madis/Downloads/Tinsley%20Resume.pdf" class="resumebox">My Resume</a>
+
+        <div class= "contentbox">
+        <p class = "box">My name is Madison Tinsley, and I am 21 years old. I grew up in Lee’s Summit,
             Missouri, about 15 minutes from Kansas City. I lived with my parents and our dog,
             Marley. Before I started high school, my older half-brother moved in with my parents and
             me. I joined theater and choir in high school, developing a passion for singing. I decided
@@ -36,8 +35,8 @@ Add your quote using the Blockquote element.
             Mizzou. I now plan to establish a career in technology after graduation.
             </p>
 
-            <blockquote> "A name is not a leash" — <em>Mary Oliver</em></blockquote>
-
+            <blockquote class="box"> "A name is not a leash" — <em>Mary Oliver</em></blockquote>
+        </div>
     </main>
 
 
@@ -48,4 +47,6 @@ Add your quote using the Blockquote element.
         <p>© Madison Tinsley matcfr@umsystem.edu. All rights reserved.</p>
       </footer>
 </body>
+</div>
 </html>
+
