--- a/About_Me.html
+++ b/About_Me.html
@@ -17,7 +17,7 @@ Tested: Feb 24 2023
 <body>
     <header><h1>About Me</h1></header>
     <main>
-        <a href="file:///C:/Users/madis/Downloads/Tinsley%20Resume.pdf" class="resumebox">My Resume</a>
+        <a href="https://drive.google.com/file/d/1yMm9pVaCscDtWXKApwggMA9dWsaC1MM-/view?usp=sharing" class="resumebox">My Resume</a>
 
         <div class= "contentbox">
         <p class = "box">My name is Madison Tinsley, and I am 21 years old. I grew up in Lee’s Summit,
