--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <title>welcome</title>
-    <head> <link rel = "stylesheet" href = "style.css"/> </head>
+    <link rel="stylesheet" href="nav.css"></link> 
     <body>
-         <h1>Index!</h1>
-   <p>
-    <a href= "About_Me.html"> About Me</a>
-   <a href= "Home_Page.html"> Home Page</a>
-    <a href= "Tinsley_Template.html"> Template</a>
-</p>
+
+<ul>
+   <li><a href= "About_Me.html"> About</a></li>
+   <li><a href= "Home_Page.html"> Home</a></li>
+   <li><a href= "#project.html"> Project</a></li>
+    <li><a href= "Tinsley_Template.html"> Template </a></li>
+</ul>
 
     </body>
 </html>
