--- a/Home_Page.html
+++ b/Home_Page.html
@@ -7,31 +7,33 @@ Use: ???
 Author: Madison Tinsley
 School/Term: University of Missouri Spring 2023
 Developed: Feb 5 2023
-Tested: Feb 5 2023
--->
-<!---
-    Use all HTML5 semantic elements (header, main, nav, footer) 
-    (we will revisit this later to be more specific, this is simply to group your content for coding later!), for now, 
-    you will have content inside the <header>, <main> and the <footer> elements and nothing inside the <nav> element.
-Add the Content for your Home Page  
-(see your Week 1 Project submission), plus any additional text needed
-Double-check you have the proper page title and metadata in the <head> 
-    - hint you should only have one metadata at this point!
-Use <h1> and one other heading (choose from <h2>, <h3>, <h4>, <h5>, <h6>) 
-    - hint, H1 should be the only content that goes between the <header> semantic element!
-Use <p> element - must be used for all text not included in another element. 
-    - hint, this should go between the <main> semantic element tags!
-Save AS your index.html file (If you have already created an index.html file replace it with this file.)
+Tested: Feb 24 2023
 -->
 
            	<meta charset="utf-8">
-           	<title>Homepage</title>
+           	<title>Home Page</title>
 </head>
 <body>
     <header>
         <h1>Madison Tinsley's Portfolio</h1>
     </header>
-    <nav><!-- Empty for now --></nav>
+    <nav>
+        <link rel="stylesheet" href="nav.css"/>
+        <ul>
+            <li><a href= "About_Me.html"> About</a></li>
+            <li><a href= "Home_Page.html"> Home</a></li>
+            <li class="tierone"><a href= "project.html"> Project</a>
+                <ul class="tiertwo">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                </ul>
+            </li>
+            </div>
+         </ul>
+
+    </nav>
+    <link rel="stylesheet" href="style.css" />
     <main>
        <h2>Welcome to my portfolio!</h2>
 
