--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
     <title>welcome</title>
-    <link rel="stylesheet" href="nav.css"></link> 
+    <link rel="stylesheet" href="style.css"
     <body>
 
-<ul>
-   <li><a href= "About_Me.html"> About</a></li>
-   <li><a href= "Home_Page.html"> Home</a></li>
-   <li><a href= "#project.html"> Project</a></li>
-    <li><a href= "Tinsley_Template.html"> Template </a></li>
-</ul>
+ <nav>
+        <link rel="stylesheet" href="nav.css"/>
+        <ul>
+            <li><a href= "About_Me.html"> About</a></li>
+            <li><a href= "Home_Page.html"> Home</a></li>
+            <li><a href= "reflection.html">Reflection</a></li>
+            <li class="tierone"><a href= "project.html"> Project</a>
+                <ul class="tiertwo">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                </ul>
+            </li>
+            </div>
+         </ul>
+
+    </nav>
 
     </body>
 </html>
