--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href= "About_Me.html"> About</a></li>
             <li><a href= "Home_Page.html"> Home</a></li>
             <li><a href= "reflection.html">Reflection</a></li>
+            <li><a href= "gridpractice.html">About Grid Practice</a></li>
             <li class="tierone"><a href= "project.html"> Project</a>
                 <ul class="tiertwo">
                     <li>1</li>
